--- a/app/index.html
+++ b/app/index.html
@@ -31,14 +31,14 @@
 
             <div class="span10">
                 Sort by:
-                <select ng-model="orderProp">
+                <select ng-model="orderProp" style="margin-bottom: 10px">
                     <option value="firstName">First Name</option>
                     <option value="lastName">Last Name</option>
                 </select>
                 <ul>
                     <li ng-repeat="employee in employees | filter:query | orderBy:orderProp">
-                        <img ng-src="{{employee.photoUrl}}" style="width:150px;min-height:150px;" />
-                        {{employee.firstName}} {{employee.lastName}}
+                        <a href="#/{{employee._id}}" class="thumb"><img ng-src="{{employee.photoUrl}}" style="width:150px;min-height:150px;" /></a>
+                        <a href="#/{{employee._id}}">{{employee.firstName}} {{employee.lastName}}</a>
                     </li>
                 </ul>
             </div>
