--- a/app/index.html
+++ b/app/index.html
@@ -7,43 +7,11 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <script src="lib/angular.js"></script>
+    <script src="lib/angular-route.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
 </head>
-<body ng-controller="EmployeesCtrl">
-    <div class="jumbotron text-center">
-        <h1>Employees App<span class="label label-info">{{employees.length}}</span> </h1>
-    </div>
-    <div class="container-fluid">
-        <div class="row-fluid">
-            <div class="span2">
-                <input ng-model="query" placeholder="Search" class="form-control" >
-
-                <form>
-                    <div>
-                        <h3 style="margin-top:50px"><span class="label label-info" > Додај нов</span> </h3>
-                        <input ng-model="formData.firstName" placeholder="First Name" class="form-control" style="margin-top: 10px">
-                        <input ng-model="formData.lastName" placeholder="Last Name" class="form-control" style="margin-top: 10px">
-                        <input ng-model="formData.photoUrl" placeholder="Photo URL" class="form-control" style="margin-top: 10px">
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-lg" ng-click="addEmployee()" style="margin-top: 10px">Додај</button>
-                </form>
-            </div>
-
-            <div class="span10">
-                Sort by:
-                <select ng-model="orderProp" style="margin-bottom: 10px">
-                    <option value="firstName">First Name</option>
-                    <option value="lastName">Last Name</option>
-                </select>
-                
-                <ul>
-                    <li ng-repeat="employee in employees | filter:query | orderBy:orderProp">
-                        <a href="#/{{employee._id}}" class="thumb"><img ng-src="{{employee.photoUrl}}" style="width:150px;min-height:150px;" /></a>
-                        <a href="#/{{employee._id}}">{{employee.firstName}} {{employee.lastName}}</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+<body>
+    <div ng-view class="view-frame"></div>
 </body>
 </html>
