--- a/app/index.html
+++ b/app/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animations.css">
     <script src="lib/angular.js"></script>
     <script src="lib/angular-route.js"></script>
+    <script src="lib/angular-animate.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/animations.js"></script>
 </head>
 <body>
     <div ng-view class="view-frame"></div>
