--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,9 @@
     <script src="js/animations.js"></script>
 </head>
 <body>
+    <div class="jumbotron text-center">
+        <h1>Employees App </h1>
+    </div>
     <div ng-view class="view-frame"></div>
 </body>
 </html>
